# uust_oop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  uust_oop_gui.spec  ООП_лабы_методичка.doc
.github/workflows/: release.yml
lab_1/: README.md  main.py  main_window.py  requirements.txt
lab_2/: README.md  lab_2.slnx
lab_2/lab_2/: circle.cpp  circle.h  closedshape.cpp  closedshape.h  coloredpoint.cpp  coloredpoint.h  geometry.cpp  geometry.h  inspectableshape.cpp  inspectableshape.h  lab_2.vcxproj  lab_2.vcxproj.filters  main.cpp  point.cpp  point.h  segment.cpp  segment.h  segmentptr.cpp  segmentptr.h  shape.cpp  shape.h  sqaure.h  square.cpp  square.h
lab_3/: main.py
lab_3_part_1/: README.md  main.py
lab_3_part_2/: README.md  main.py
lab_4/: README.md  main.py  paint_area.py  shape_storage.py  shapes.py
lab_5/: README.md
lab_5/lab_5/: lab_5.slnx  lab_5.vcxproj  main.cpp
lab_5/lab_5/lab_5/: lab_5.vcxproj
lab_6/: README.md  commands.py  main.py  paint_area.py  shape_storage.py  shapes.py
lab_7/: README.md  command_history.py  commands.py  main.py  paint_area.py  property_panel.py  shape_storage.py  shapes.py  storage_tree.py
